--- a/templates/student/classroom.html
+++ b/templates/student/classroom.html
@@ -1,108 +1,119 @@
 {% extends "base.html" %}
 {% load tag %}
 {% block content %}
-    <p style="padding:0px; margin:2px;">
-        <a href="/student/classroom/add" role="button" class="btn btn-info active">加入班級</a>
-          						{% if request.user.id|assistant or request.user|has_group:"teacher" %}
-          {% for enroll, show in classrooms %}
-          <a href="javascript:scroll({{enroll.classroom.id}})" role="btn" class="btn btn-success">{{enroll.classroom}}</a>
-          {% endfor %}
-      {% endif %}
-</p>
+<div class="toolbar mb-2">
+  <a href="/student/classroom/add" role="button" class="btn btn-primary">加入班級</a>
+  {% if request.user.id|assistant or request.user|has_group:"teacher" %}
+  <div class="mt-1">
+    {% for enroll, show in classrooms %}
+    <a href="javascript:scroll({{enroll.classroom.id}})" role="btn" class="btn btn-sm btn-outline-primary">{{enroll.classroom}}</a>
+    {% endfor %}
+  </div>
+  {% endif %}
+</div>
 {% for enroll, shows in classrooms %}
-<div class="card" id="{{enroll.classroom.id}}">
-  <h5 class="card-header">{{enroll.classroom}}：{{enroll.seat}}號</h5>
+<div class="card m-0" id="{{enroll.classroom.id}}">
+  <div class="card-header">
+    <h5 class="card-title p-1 m-0">{{enroll.classroom}}：{{enroll.seat}}號</h5>
+  </div>
   <div class="card-body">
-    <p style="padding:0px; margin:2px;">
-基本資料：
-			<a href="/student/classroom/seat/{{enroll.id}}/{{enroll.classroom_id}}" role="button" class="btn btn-success">座號</a>
-			<a href="/student/group/panel/{{enroll.classroom_id}}" role="button" class="btn btn-success">組別</a>
-			<a href="/student/classmate/{{enroll.classroom_id}}" role="button" class="btn btn-success">同學</a>
-			<a href="/student/work1/{{enroll.classroom.lesson}}/{{enroll.classroom_id}}" role="button" class="btn btn-success">小老師</a>
-      <a href="/student/memo_count/{{enroll.classroom_id}}" role="button" class="btn btn-success">詞頻</a>      
-    </p>
-    <p style="padding:0px; margin:2px;">
-  課程活動：
-	        <a href="/student/work/0/{{enroll.classroom.lesson}}/{{enroll.classroom_id}}" role="button" class="btn btn-success">指定作業</a>
-{% if not enroll.classroom.lesson == 1 %}
-			<a href="/student/progress/0/{{enroll.classroom.lesson}}/1/{{enroll.classroom.id}}/" role="button" class="btn btn-success">進度</a>
-{% endif %} 
-	        <a href="/student/work/1/{{enroll.classroom.lesson}}/{{enroll.classroom_id}}" role="button" class="btn btn-success">自訂作業</a>
-{% if not enroll.classroom.lesson == 1 %}
-			 <a href="/student/progress/1/{{enroll.classroom.lesson}}/1/{{enroll.classroom.id}}/" role="button" class="btn btn-success">進度</a>			 
-{% endif %}
-{% if not enroll.classroom.lesson == 10 %}
-	        <a href="/student/work/2/{{enroll.classroom.lesson}}/{{enroll.classroom_id}}" role="button" class="btn btn-success">檢核作業</a>  
-{% if not enroll.classroom.lesson == 1 %}
-     	<a href="/student/progress/2/{{enroll.classroom.lesson}}/1/{{enroll.classroom.id}}/" role="button" class="btn btn-success">進度</a>
-{% endif %}
-{% endif %}
-{% if not enroll.classroom.lesson == 1 and not enroll.classroom.lesson == 10 %}
-			<a href="/certificate/cert/classroom/{{enroll.classroom.lesson}}/1/{{enroll.classroom.id}}/" role="button" class="btn btn-success">證書</a>         
-{% endif %}
-{% if enroll.classroom.lesson == 10 %}
-      <a href="/student/work/book/report/{{enroll.classroom.id}}/" role="button" class="btn btn-success">月報表</a>   
-{% endif %}
-    </p>
-{% if enroll.classroom.lesson == 1 %}
-	   <p style="padding:0px; margin:2px;">
-     作業進度：
-			<a href="/student/progress/0/{{enroll.classroom.lesson}}/1/{{enroll.classroom.id}}/" role="button" class="btn btn-success">12堂課</a>
-			<a href="/student/progress/0/{{enroll.classroom.lesson}}/2/{{enroll.classroom.id}}/" role="button" class="btn btn-success">實戰入門</a>
-			<a href="/student/progress/0/{{enroll.classroom.lesson}}/3/{{enroll.classroom.id}}/" role="button" class="btn btn-success">實戰進擊</a>
-			<a href="/student/progress/0/{{enroll.classroom.lesson}}/4/{{enroll.classroom.id}}/" role="button" class="btn btn-success">實戰高手</a>			
-			<a href="/student/progress/1/{{enroll.classroom.lesson}}/1/{{enroll.classroom.id}}/" role="button" class="btn btn-success">自訂作業</a>			
-    </p>
-{% endif %}
-{% if enroll.classroom.lesson == 1 %}			
-      <p style="padding:0px; margin:2px;">修業證書：        
-			<a href="/certificate/cert/classroom/1/0/{{enroll.classroom.id}}/" role="button" class="btn btn-success">Hour of Code</a>        
-			<a href="/certificate/cert/classroom/1/1/{{enroll.classroom.id}}/" role="button" class="btn btn-success">12堂課</a>        
-			<a href="/certificate/cert/classroom/1/2/{{enroll.classroom.id}}/" role="button" class="btn btn-success">實戰入門</a>
-			<a href="/certificate/cert/classroom/1/3/{{enroll.classroom.id}}/" role="button" class="btn btn-success">實戰進擊</a>
-			<a href="/certificate/cert/classroom/1/4/{{enroll.classroom.id}}/" role="button" class="btn btn-success">實戰高手</a>			
-    </p>
-{% endif %}        
-    <p style="padding:0px; margin:2px;">師生互動：
-			<a href="/survey/pre_result{{enroll.classroom.lesson}}/{{enroll.classroom_id}}" role="button" class="btn btn-success">課前問卷</a>
-			<a href="/survey/post_result{{enroll.classroom.lesson}}/{{enroll.classroom_id}}" role="button" class="btn btn-success">課後問卷</a>        
-			<a href="/student/announce/{{enroll.classroom_id}}" role="button" class="btn btn-success">公告</a>
-			<a href="/student/forum/{{enroll.classroom_id}}/0" role="button" class="btn btn-success">討論區</a>      
-		    <a href="/account/line" role="button" class="btn btn-success">我的私訊</a>
-   			{% if is_teacher %}
-		    <a href="/account/line/class/{{enroll.classroom_id}}" role="button" class="btn btn-success">私訊同學</a>
-			{% endif %}
-			<a href="/account/line/add/{{enroll.classroom_id}}/{{enroll.classroom.teacher_id}}" role="button" class="btn btn-success">私訊老師</a>
-    </p>
-      {% for show in shows %}
-    <p style="padding:0px; margin:2px;">
-    創意秀({{forloop.revcounter}})：
-			<a href="/show/group/{{show.id}}" role="button" class="btn btn-success">組別</a>
-			{% if enroll.group_show > 0 %}
-			<a href="/show/group/submit/{{show.id}}/{{enroll.group_show}}/" role="button" class="btn btn-success">繳交</a>
-			{% endif %}
-			<a href="/show/rank/1/{{show.id}}/" role="button" class="btn btn-success">美工王</a>
-			<a href="/show/rank/2/{{show.id}}/" role="button" class="btn btn-success">程式王</a>
-			<a href="/show/rank/3/{{show.id}}/" role="button" class="btn btn-success">創意王</a>			
-			</p>
-			{% endfor %}
-    </p>
+    <div>
+      <span class="badge badge-secondary">基本資料</span>
+      <div class="btn-group">
+			<a href="/student/classroom/seat/{{enroll.id}}/{{enroll.classroom_id}}" role="button" class="btn btn-sm btn-primary">座號</a>
+			<a href="/student/group/panel/{{enroll.classroom_id}}" role="button" class="btn btn-sm btn-primary">組別</a>
+			<a href="/student/classmate/{{enroll.classroom_id}}" role="button" class="btn btn-sm btn-primary">同學</a>
+			<a href="/student/work1/{{enroll.classroom.lesson}}/{{enroll.classroom_id}}" role="button" class="btn btn-sm btn-primary">小老師</a>
+      <a href="/student/memo_count/{{enroll.classroom_id}}" role="button" class="btn btn-sm btn-primary">詞頻</a>      
+      </div>
+    </div>
+    <div>
+      <span class="badge badge-secondary">課程活動</span>
+      <div class="btn-group">
+        <a href="/student/work/0/{{enroll.classroom.lesson}}/{{enroll.classroom_id}}" role="button" class="btn btn-sm btn-primary">指定作業</a>
+        {% if not enroll.classroom.lesson == 1 %}
+          <a href="/student/progress/0/{{enroll.classroom.lesson}}/1/{{enroll.classroom.id}}/" role="button" class="btn btn-sm btn-primary">進度</a>
+        {% endif %} 
+        <a href="/student/work/1/{{enroll.classroom.lesson}}/{{enroll.classroom_id}}" role="button" class="btn btn-sm btn-primary">自訂作業</a>
+        {% if not enroll.classroom.lesson == 1 %}
+          <a href="/student/progress/1/{{enroll.classroom.lesson}}/1/{{enroll.classroom.id}}/" role="button" class="btn btn-sm btn-primary">進度</a>			 
+        {% endif %}
+        {% if not enroll.classroom.lesson == 10 %}
+          <a href="/student/work/2/{{enroll.classroom.lesson}}/{{enroll.classroom_id}}" role="button" class="btn btn-sm btn-primary">檢核作業</a>  
+          {% if not enroll.classroom.lesson == 1 %}
+            <a href="/student/progress/2/{{enroll.classroom.lesson}}/1/{{enroll.classroom.id}}/" role="button" class="btn btn-sm btn-primary">進度</a>
+          {% endif %}
+        {% endif %}
+        {% if not enroll.classroom.lesson == 1 and not enroll.classroom.lesson == 10 %}
+          <a href="/certificate/cert/classroom/{{enroll.classroom.lesson}}/1/{{enroll.classroom.id}}/" role="button" class="btn btn-sm btn-primary">證書</a>         
+        {% endif %}
+        {% if enroll.classroom.lesson == 10 %}
+          <a href="/student/work/book/report/{{enroll.classroom.id}}/" role="button" class="btn btn-sm btn-primary">月報表</a>   
+        {% endif %}
+      </div>
+    </div>
+    <div>
+      <span class="badge badge-secondary">作業進度</span>
+      <div class="btn-group">
+        <a href="/student/progress/0/{{enroll.classroom.lesson}}/1/{{enroll.classroom.id}}/" role="button" class="btn btn-sm btn-primary">12堂課</a>
+        <a href="/student/progress/0/{{enroll.classroom.lesson}}/2/{{enroll.classroom.id}}/" role="button" class="btn btn-sm btn-primary">實戰入門</a>
+        <a href="/student/progress/0/{{enroll.classroom.lesson}}/3/{{enroll.classroom.id}}/" role="button" class="btn btn-sm btn-primary">實戰進擊</a>
+        <a href="/student/progress/0/{{enroll.classroom.lesson}}/4/{{enroll.classroom.id}}/" role="button" class="btn btn-sm btn-primary">實戰高手</a>			
+        <a href="/student/progress/1/{{enroll.classroom.lesson}}/1/{{enroll.classroom.id}}/" role="button" class="btn btn-sm btn-primary">自訂作業</a>			
+      </div>
+    </div>
+    <div>
+      <span class="badge badge-secondary">修業證書</span>
+      <div class="btn-group">
+        <a href="/certificate/cert/classroom/1/0/{{enroll.classroom.id}}/" role="button" class="btn btn-sm btn-primary">Hour of Code</a>        
+        <a href="/certificate/cert/classroom/1/1/{{enroll.classroom.id}}/" role="button" class="btn btn-sm btn-primary">12堂課</a>        
+        <a href="/certificate/cert/classroom/1/2/{{enroll.classroom.id}}/" role="button" class="btn btn-sm btn-primary">實戰入門</a>
+        <a href="/certificate/cert/classroom/1/3/{{enroll.classroom.id}}/" role="button" class="btn btn-sm btn-primary">實戰進擊</a>
+        <a href="/certificate/cert/classroom/1/4/{{enroll.classroom.id}}/" role="button" class="btn btn-sm btn-primary">實戰高手</a>			
+      </div>
+    </div>
+    <div>
+      <span class="badge badge-secondary">師生互動</span>
+      <div class="btn-group">
+        <a href="/survey/pre_result{{enroll.classroom.lesson}}/{{enroll.classroom_id}}" role="button" class="btn btn-sm btn-primary">課前問卷</a>
+        <a href="/survey/post_result{{enroll.classroom.lesson}}/{{enroll.classroom_id}}" role="button" class="btn btn-sm btn-primary">課後問卷</a>        
+        <a href="/student/announce/{{enroll.classroom_id}}" role="button" class="btn btn-sm btn-primary">公告</a>
+        <a href="/student/forum/{{enroll.classroom_id}}/0" role="button" class="btn btn-sm btn-primary">討論區</a>      
+        <a href="/account/line" role="button" class="btn btn-sm btn-primary">我的私訊</a>
+        {% if is_teacher %}
+          <a href="/account/line/class/{{enroll.classroom_id}}" role="button" class="btn btn-sm btn-primary">私訊同學</a>
+        {% endif %}
+        <a href="/account/line/add/{{enroll.classroom_id}}/{{enroll.classroom.teacher_id}}" role="button" class="btn btn-sm btn-primary">私訊老師</a>
+      </div>
+    </div>
+    {% for show in shows %}
+    <div>
+      <span class="badge badge-secondary">創意秀({{forloop.revcounter}})</span>
+      <div class="btn-group">
+        <a href="/show/group/{{show.id}}" role="button" class="btn btn-sm btn-primary">組別</a>
+        {% if enroll.group_show > 0 %}
+        <a href="/show/group/submit/{{show.id}}/{{enroll.group_show}}/" role="button" class="btn btn-sm btn-primary">繳交</a>
+        {% endif %}
+        <a href="/show/rank/1/{{show.id}}/" role="button" class="btn btn-sm btn-primary">美工王</a>
+        <a href="/show/rank/2/{{show.id}}/" role="button" class="btn btn-sm btn-primary">程式王</a>
+        <a href="/show/rank/3/{{show.id}}/" role="button" class="btn btn-sm btn-primary">創意王</a>			
+      </div>
+    </div>
+    {% endfor %}
   </div>
 </div>
-<BR>    
-
 {% endfor %}
-        {% load pagination %}
-        {% get_pagination %}  
+{% load pagination %}
+{% get_pagination %}  
 {% endblock %}
-  {% block footer_script %}
-  <script>
-    function scroll(element) {
-  // scrolls to the element with id='citation' 
 
-var node = document.getElementById(element);    
-node.scrollIntoView();
-      window.scrollBy(0, -70);
-    }
-  </script>
-  {% endblock %}
+{% block footer_script %}
+<script>
+function scroll(element) {
+  // scrolls to the element with id='citation' 
+  var node = document.getElementById(element);    
+  node.scrollIntoView();
+  window.scrollBy(0, -70);
+}
+</script>
+{% endblock %}
