--- a/templates/teacher/classroom_list.html
+++ b/templates/teacher/classroom_list.html
@@ -1,53 +1,58 @@
 {% extends "base.html" %}
 {% block title %} Teachers {% endblock %}
 {% block content %}
-<!--
-        <a href="/vphysics/classroom/">Vphysics班級</a><BR><BR>
-		<HR>
--->
-     <a href="/teacher/classroom/add" role="button" class="btn btn-info active">新增班級</a>
-     <a href="/teacher/student/list" role="button" class="btn btn-info active">學生帳號</a>
-          {% for classroom in classrooms %}
-          <a href="javascript:scroll({{classroom.id}})" role="btn" class="btn btn-success">{{classroom.name}}</a>
-          {% endfor %}
-        <table class="table">
-            <tr>
-                <td>名稱</td>
-                <td>密碼</td>
-                <td>功能</td>
-        {% for classroom in classrooms %}
-            <tr id={{classroom.id}}>
-            <td>{{classroom.name}}({{classroom.lesson_choice}})</td>
-            <td>{{classroom.password}}</td>
-            <td>
-              <p style="padding:0px; margin:2px;">
-                <a href="/teacher/classroom/edit/{{classroom.id}}" role="button" class="btn btn-success">修改</a>
-                <a href="/student/classmate/{{classroom.id}}" role="button" class="btn btn-success">學生</a>
-                <a href="/teacher/classroom/assistant/{{classroom.id}}" role="button" class="btn btn-success">助教</a>                
-                <a href="/student/group/panel/{{classroom.id}}" role="button" class="btn btn-success">組別</a>
-							  <a href="/teacher/work/{{classroom.lesson}}/{{classroom.id}}" role="button" class="btn btn-success">指定作業</a>
-							  <a href="/teacher/work2/{{classroom.lesson}}/{{classroom.id}}" role="button" class="btn btn-success">自訂作業</a>                
-							  <a href="/teacher/work3/{{classroom.lesson}}/{{classroom.id}}" role="button" class="btn btn-success">檢核作業</a>                
-               </p>
-              <p style="padding:0px; margin:2px;">
-                <a href="/teacher/announce/{{classroom.id}}" role="button" class="btn btn-success">公告</a>   
-                <a href="/teacher/forum/{{classroom.id}}" role="button" class="btn btn-success">討論區</a>                          
-                <a href="/survey/select/{{classroom.lesson}}/{{classroom.id}}" role="button" class="btn btn-success">問卷</a>
-							  <a href="/teacher/assistant/group/0/{{classroom.id}}/" role="button" class="btn btn-success">小老師</a>
-							  <a href="/teacher/memo/{{classroom.lesson}}/{{classroom.id}}" role="button" class="btn btn-success">心得</a>
-							  {% if classroom.lesson == 1 %}
-				              <a href="/teacher/exam/{{classroom.id}}" role="button" class="btn btn-success">測驗</a>					  
-							  {% endif %}
-							  <a href="/teacher/grade/0/{{classroom.lesson}}/1/{{classroom.id}}" role="button" class="btn btn-success">成績</a>       
-							  <a href="/show/list/{{classroom.id}}" role="button" class="btn btn-success">創意秀</a>
-  							<a href="/teacher/cert/{{classroom.lesson}}/{{classroom.id}}" role="button" class="btn btn-success">證書</a>		              
-              </p>   
-              </td>
-            </tr>
-        {% endfor %}
-        </table>
-        {% load pagination %}
-        {% get_pagination %}         
+<div class="toolbar mb-2">
+  <a href="/teacher/classroom/add" role="button" class="btn btn-primary">新增班級</a>
+  <a href="/teacher/student/list" role="button" class="btn btn-primary">學生帳號</a>
+  <div class="btn-group1 mt-1">
+    {% for classroom in classrooms %}
+    <a href="javascript:scroll({{classroom.id}})" role="btn" class="btn btn-sm btn-outline-primary">{{classroom.name}}</a>
+    {% endfor %}
+  </div>
+</div>
+<table class="table table-sm">
+  <thead>
+    <tr>
+        <th>名稱</th>
+        <th>密碼</th>
+        <th>功能</th>
+    </tr>
+  </thead>
+  <tbody>
+  {% for classroom in classrooms %}
+    <tr id={{classroom.id}}>
+      <td>{{classroom.name}}({{classroom.lesson_choice}})</td>
+      <td>{{classroom.password}}</td>
+      <td>
+        <div class="btn-group">
+          <a href="/teacher/classroom/edit/{{classroom.id}}" role="button" class="btn btn-sm btn-primary">修改</a>
+          <a href="/student/classmate/{{classroom.id}}" role="button" class="btn btn-sm btn-primary">學生</a>
+          <a href="/teacher/classroom/assistant/{{classroom.id}}" role="button" class="btn btn-sm btn-primary">助教</a>                
+          <a href="/student/group/panel/{{classroom.id}}" role="button" class="btn btn-sm btn-primary">組別</a>
+          <a href="/teacher/work/{{classroom.lesson}}/{{classroom.id}}" role="button" class="btn btn-sm btn-primary">指定作業</a>
+          <a href="/teacher/work2/{{classroom.lesson}}/{{classroom.id}}" role="button" class="btn btn-sm btn-primary">自訂作業</a>                
+          <a href="/teacher/work3/{{classroom.lesson}}/{{classroom.id}}" role="button" class="btn btn-sm btn-primary">檢核作業</a>                
+        </div>
+        <div class="btn-group">
+          <a href="/teacher/announce/{{classroom.id}}" role="button" class="btn btn-sm btn-primary">公告</a>   
+          <a href="/teacher/forum/{{classroom.id}}" role="button" class="btn btn-sm btn-primary">討論區</a>                          
+          <a href="/survey/select/{{classroom.lesson}}/{{classroom.id}}" role="button" class="btn btn-sm btn-primary">問卷</a>
+          <a href="/teacher/assistant/group/0/{{classroom.id}}/" role="button" class="btn btn-sm btn-primary">小老師</a>
+          <a href="/teacher/memo/{{classroom.lesson}}/{{classroom.id}}" role="button" class="btn btn-sm btn-primary">心得</a>
+          {% if classroom.lesson == 1 %}
+                <a href="/teacher/exam/{{classroom.id}}" role="button" class="btn btn-sm btn-primary">測驗</a>					  
+          {% endif %}
+          <a href="/teacher/grade/0/{{classroom.lesson}}/1/{{classroom.id}}" role="button" class="btn btn-sm btn-primary">成績</a>       
+          <a href="/show/list/{{classroom.id}}" role="button" class="btn btn-sm btn-primary">創意秀</a>
+          <a href="/teacher/cert/{{classroom.lesson}}/{{classroom.id}}" role="button" class="btn btn-sm btn-primary">證書</a>		              
+        </div>   
+      </td>
+    </tr>
+  {% endfor %}
+  </tbody>
+</table>
+{% load pagination %}
+{% get_pagination %}         
 {% endblock %}
   {% block footer_script %}
   <script>
