--- a/templates/account/line_list.html
+++ b/templates/account/line_list.html
@@ -3,10 +3,10 @@
 {% load tag %}
 {% block content %}
 <div id="btn-toolbar" class="btn-group mb-3">
-  <a href="/account/dashboard/0" class="btn btn-info{% if action == 0 %} active{% endif %}" role="btn"><span class="glyphicon glyphicon-search" aria-hidden="true"></span> 所有訊息</a>
-  <a href="/account/dashboard/1" class="btn btn-info{% if action == 1 %} active{% endif %}" role="btn"><span class="glyphicon glyphicon-bullhorn" aria-hidden="true"></span> 課程公告</a>
-  <a href="/account/dashboard/2" class="btn btn-info{% if action == 2 %} active{% endif %}" role="btn"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> 我的私訊</a>
-  <a href="/account/line/" class="btn btn-info" role="btn"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> 寄出私訊</a>
+  <a href="/account/dashboard/0" class="btn btn-sm btn-info" role="btn"><span class="glyphicon glyphicon-search" aria-hidden="true"></span> 所有訊息</a>
+  <a href="/account/dashboard/1" class="btn btn-sm btn-info" role="btn"><span class="glyphicon glyphicon-bullhorn" aria-hidden="true"></span> 課程公告</a>
+  <a href="/account/dashboard/2" class="btn btn-sm btn-info" role="btn"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> 我的私訊</a>
+  <a href="/account/line/" class="btn btn-sm btn-info active" role="btn"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> 寄出私訊</a>
 </div>
 <table class="table table-sm table-hover">
   <thead>
