--- a/templates/teacher/grade.html
+++ b/templates/teacher/grade.html
@@ -1,62 +1,67 @@
 {% extends "base.html" %}
 {% block content %}
-{% if lesson == "1" %}
-<a href="/teacher/grade/0/1/1/{{classroom.id}}" role="btn" class='btn {% if typing == "0" and unit == "1" %}btn-info active{% endif %}'>12堂課</a>
-<a href="/teacher/grade/0/1/2/{{classroom.id}}" role="btn" class='btn {% if typing == "0" and unit == "2" %}btn-info active{% endif %}'>實戰入門</a>
-<a href="/teacher/grade/0/1/3/{{classroom.id}}" role="btn" class='btn {% if typing == "0" and unit == "3" %}btn-info active{% endif %}'>實戰進擊</a>
-<a href="/teacher/grade/0/1/4/{{classroom.id}}" role="btn" class='btn {% if typing == "0" and unit == "4" %}btn-info active{% endif %}'>實戰高手</a>
-{% elif lesson == "2" %}
-<a href="/teacher/grade/0/2/1/{{classroom.id}}" role="btn" class='btn {% if typing == "0" %}btn-info active{% endif %}'>指定作業</a>
-{% elif lesson == "3" %}
-<a href="/teacher/grade/0/3/1/{{classroom.id}}" role="btn" class='btn {% if typing == "0" %}btn-info active{% endif %}'>指定作業</a>
-{% elif lesson == "4" %}
-<a href="/teacher/grade/0/4/1/{{classroom.id}}" role="btn" class='btn {% if typing == "0" %}btn-info active{% endif %}'>指定作業</a>
-{% elif lesson == "5" %}
-<a href="/teacher/grade/0/5/1/{{classroom.id}}" role="btn" class='btn {% if typing == "0" %}btn-info active{% endif %}'>指定作業</a>
-{% elif lesson == "6" %}
-<a href="/teacher/grade/0/6/1/{{classroom.id}}" role="btn" class='btn {% if typing == "0" %}btn-info active{% endif %}'>指定作業</a>
-{% elif lesson == "7" %}
-<a href="/teacher/grade/0/7/1/{{classroom.id}}" role="btn" class='btn {% if typing == "0" %}btn-info active{% endif %}'>指定作業</a>
-{% endif %}
-<a href="/teacher/grade/1/{{classroom.lesson}}/1/{{classroom.id}}" role="btn" class='btn {% if typing == "1" %}btn-info active{% endif %}'>自訂作業</a>
-<a href="/teacher/grade/2/{{classroom.lesson}}/1/{{classroom.id}}" role="btn" class='btn {% if typing == "2" %}btn-info active{% endif %}'>檢核作業</a>
-<a href="/teacher/grade/excel/{{typing}}/{{classroom.lesson}}/1/{{classroom.id}}" role="btn" class="btn btn-success active">匯出Excel</a>
-<BR>
+<div id="toolbar">
+  {% if lesson == "1" %}
+    <a href="/teacher/grade/0/1/1/{{classroom.id}}" role="btn" class='btn {% if typing == "0" and unit == "1" %}btn-info active{% endif %}'>12堂課</a>
+    <a href="/teacher/grade/0/1/2/{{classroom.id}}" role="btn" class='btn {% if typing == "0" and unit == "2" %}btn-info active{% endif %}'>實戰入門</a>
+    <a href="/teacher/grade/0/1/3/{{classroom.id}}" role="btn" class='btn {% if typing == "0" and unit == "3" %}btn-info active{% endif %}'>實戰進擊</a>
+    <a href="/teacher/grade/0/1/4/{{classroom.id}}" role="btn" class='btn {% if typing == "0" and unit == "4" %}btn-info active{% endif %}'>實戰高手</a>
+  {% elif lesson == "2" %}
+    <a href="/teacher/grade/0/2/1/{{classroom.id}}" role="btn" class='btn {% if typing == "0" %}btn-info active{% endif %}'>指定作業</a>
+  {% elif lesson == "3" %}
+    <a href="/teacher/grade/0/3/1/{{classroom.id}}" role="btn" class='btn {% if typing == "0" %}btn-info active{% endif %}'>指定作業</a>
+  {% elif lesson == "4" %}
+    <a href="/teacher/grade/0/4/1/{{classroom.id}}" role="btn" class='btn {% if typing == "0" %}btn-info active{% endif %}'>指定作業</a>
+  {% elif lesson == "5" %}
+    <a href="/teacher/grade/0/5/1/{{classroom.id}}" role="btn" class='btn {% if typing == "0" %}btn-info active{% endif %}'>指定作業</a>
+  {% elif lesson == "6" %}
+    <a href="/teacher/grade/0/6/1/{{classroom.id}}" role="btn" class='btn {% if typing == "0" %}btn-info active{% endif %}'>指定作業</a>
+  {% elif lesson == "7" %}
+    <a href="/teacher/grade/0/7/1/{{classroom.id}}" role="btn" class='btn {% if typing == "0" %}btn-info active{% endif %}'>指定作業</a>
+  {% endif %}
+  <a href="/teacher/grade/1/{{classroom.lesson}}/1/{{classroom.id}}" role="btn" class='btn {% if typing == "1" %}btn-info active{% endif %}'>自訂作業</a>
+  <a href="/teacher/grade/2/{{classroom.lesson}}/1/{{classroom.id}}" role="btn" class='btn {% if typing == "2" %}btn-info active{% endif %}'>檢核作業</a>
+  <a href="/teacher/grade/excel/{{typing}}/{{classroom.lesson}}/1/{{classroom.id}}" role="btn" class="btn btn-success active">匯出Excel</a>
+</div>
 
 班級名稱：{{ classroom.name }}<BR>
-<table class="table" style="max-width:850px">
-  <tr>
-  <td style="padding:2px">座號</td>
-  <td style="padding:2px">姓名</td>
-  <td align="center" style="padding:0px">成績</td>    
-                {% for assignment in lesson_list %}                    
-                     <td align="center" style="padding:0px">{% if typing == "0" %}{{assignment.1}}{% else %}{{assignment.title}}{% endif %}</td>              
-                {% endfor %}
-    <td></td>
-    
-</tr>
-  <tr>
-  <td></td>
-  <td></td>
-  <td></td>
-
-  {% for assignment in lesson_list %}      
-    <td align="center" style="padding:0px">  
-  <button type="button" class="btn btn-warning btn-circle">{% if typing == "0" %}{{assignment.0}}{% else %}{{forloop.counter}}{% endif %}</button> 
-   </td>
-  {% endfor %}
-<td align="center" style="padding:0px"><button type="button" class="btn btn-warning btn-circle">心得</button></td>
-  </tr>
-{% for enroll, enroll_score, memo, grade in data %}
-<tr>
-  <td style="padding:2px">{{enroll.seat}}</td>
-  <td style="padding:2px" nowrap>{{enroll.student.first_name}}</td>
-  <td style="padding:0px" align=center>{{grade}}</td>
-  {% for score, index in enroll_score %}
-  <td align=center style="padding:0px">{% if score == -2 %}V{% else %}{% if score == "X" %}<font color="grey">x</font>{% else %}{{score}}{% endif %}{% endif %}</td>
-  {% endfor %}
-  <td align=center style="padding:0px">{{memo}}</td>
-</tr>
-{% endfor %}
-  </table>
+<table class="table table-sm table-cell table-hover">
+  <thead>
+    <tr>
+      <th>座號</th>
+      <th>姓名</th>
+      <th>成績</th>    
+      {% for assignment in lesson_list %}                    
+        <th>{% if typing == "0" %}{{assignment.1}}{% else %}{{assignment.title}}{% endif %}</th>              
+      {% endfor %}
+      <th></th>
+    </tr>
+    <tr>
+      <th></th>
+      <th></th>
+      <th></th>
+      {% for assignment in lesson_list %}      
+      <th>  
+        <span class="badge badge-warning btn-circle">{% if typing == "0" %}{{assignment.0}}{% else %}{{forloop.counter}}{% endif %}</span> 
+      </th>
+      {% endfor %}
+      <th><span class="badge badge-warning btn-circle">心得</span></th>
+    </tr>
+  </thead>
+  <tbody>
+    {% for enroll, enroll_score, memo, grade in data %}
+    <tr class="center">
+      <td>{{enroll.seat}}</td>
+      <td nowrap>{{enroll.student.first_name}}</td>
+      <td>{{grade}}</td>
+      {% for score, index in enroll_score %}
+      <td>
+        {% if score == -2 %}<span class="badge badge-success">V</span>{% else %}{% if score == "X" %} <span class="badge badge-danger">X</span>{% else %}{{score}}{% endif %}{% endif %}
+      </td>
+      {% endfor %}
+      <td>{{memo}}</td>
+    </tr>
+    {% endfor %}
+  </tbody>
+</table>
 {% endblock %}
