--- a/templates/teacher/announce_detail.html
+++ b/templates/teacher/announce_detail.html
@@ -8,19 +8,19 @@
       <span class="badge badge-info">{{classroom.name}}</span>
       <div class="float-right">
         <span class="badge badge-secondary">{{ message.author.first_name }}</span>
-        <span class="badge badge-light">{{ message.time|date:"Y-m-d H:i" }}</span>
+        <span class="badge badge-light">{{ message.time|date:"Y/m/d H:i" }}</span>
       </div>
     </div>
   </div>
   <div class="card-body">
     {{message.content|safe}}
   </div>
-  {% if files %}  
+  {% if files %}
     <ul class="list-group list-group-flush">
       {% for file in files %}
       <li class="list-group-item">
         <span class="badge badge-info">{{ forloop.revcounter }}</span>
-        <span class="badge badge-light float-right">{{ file.publication_date|date:"Y-m-d H:i"}}</span>
+        <span class="badge badge-light float-right">{{ file.publication_date|date:"Y/m/d H:i"}}</span>
         {% if file.title|is_pic %}
           <a href="/account/line/showpic/{{file.id}}" target="_blank">{{file.title}}</a>
         {% else %}
@@ -40,6 +40,13 @@
     {% for announce_read in announce_reads %}
     <div class="d-inline-block text-{% if announce_read.2.read %}success{% else %}danger{% endif %}">
       ({{announce_read.0}}){{announce_read.1}}
+    </div>
+    {% endfor %}
+  </div>
+  <div class="d-flex align-content-end justify-content-between flex-wrap">
+    {% for status in read_status %}
+    <div class="d-inline-block text-{% if status.read %}success{% else %}danger{% endif %}">
+      ({{status.seat}}){{status.student.first_name}}
     </div>
     {% endfor %}
   </div>
