--- a/templates/base.html
+++ b/templates/base.html
@@ -99,7 +99,8 @@ Licence URI: http://www.os-templates.com/template-terms
                <li><a href="https://hackmd.io/@h3BSPiUpQhCVyCHgJAWWHg/By8ZOj-DI" target="_blank">第一屆智慧感測</a></li>  
                <li><a href="https://hackmd.io/@h3BSPiUpQhCVyCHgJAWWHg/ByDVYuZVO" target="_blank">第二屆智慧物聨</a></li>     
                <li><a href="https://hackmd.io/@wHOeRCsYSP-B68Reck4vWQ/Hy2q-J9Pq" target="_blank">第三屆智聨感測</a></li>  
-               <li><a href="https://hackmd.io/@wHOeRCsYSP-B68Reck4vWQ/rkW0Wk5Pc" target="_blank">第四屆智慧城市</a></li>                                              
+               <li><a href="https://hackmd.io/@wHOeRCsYSP-B68Reck4vWQ/rkW0Wk5Pc/" target="_blank">第四屆智慧生活</a></li>                                              
+               <li><a href="https://hackmd.io/@wHOeRCsYSP-B68Reck4vWQ/HJ-_TvGua/" target="_blank">第五屆智慧城市</a></li>                                              
               </ul>           
           </li>                
           <li><a href="/student/lessons/F">網路讀書會：好書共讀</a></li>
