--- a/templates/student/forum_memo.html
+++ b/templates/student/forum_memo.html
@@ -134,7 +134,7 @@
       <div class="teacher_blockquote" {% if not last.comment %} style="display:none" {% endif %}>
         <blockquote>
           <p class="teacher_comment">{{last.comment}}</p>
-          <footer>教師評語：{{last.scorer|realname}} <cite title="Source Title" class="teacher_comment_date">{{last.comment_publication_date}}</cite></footer>
+          <footer>教師評語：{{last.scorer}} <cite title="Source Title" class="teacher_comment_date">{{last.comment_publication_date}}</cite></footer>
         </blockquote>
       </div>
 
